--- a/Mongo.Web/Mongo.Web.csproj
+++ b/Mongo.Web/Mongo.Web.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{19BBCDE3-BC95-4CDF-8BDE-C04383A971C7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalLiberationFront.Mongo.Web</RootNamespace>
+    <RootNamespace>DigitalLiberationFront.Mongo.Web.Security</RootNamespace>
     <AssemblyName>DigitalLiberationFront.Mongo.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
