--- a/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
+++ b/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{F96F85DD-E9BD-4DEC-A86A-7D2460835C70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalLiberationFront.Mongo.Web.Security.Test</RootNamespace>
-    <AssemblyName>Mongo.Web.Test</AssemblyName>
+    <RootNamespace>DigitalLiberationFront.MongoDB.Web.Security.Test</RootNamespace>
+    <AssemblyName>DigitalLiberationFront.MongoDB.Web.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -66,9 +66,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mongo.Web\Mongo.Web.csproj">
+    <ProjectReference Include="..\MongoDB.Web\DigitalLiberationFront.MongoDB.Web.csproj">
       <Project>{19BBCDE3-BC95-4CDF-8BDE-C04383A971C7}</Project>
-      <Name>Mongo.Web</Name>
+      <Name>DigitalLiberationFront.MongoDB.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
