--- a/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
+++ b/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{19BBCDE3-BC95-4CDF-8BDE-C04383A971C7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalLiberationFront.Mongo.Web.Security</RootNamespace>
-    <AssemblyName>Mongo.Web</AssemblyName>
+    <RootNamespace>DigitalLiberationFront.MongoDB.Web.Security</RootNamespace>
+    <AssemblyName>DigitalLiberationFront.MongoDB.Web</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
