--- a/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
+++ b/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MongoMembershipProvider.cs" />
+    <Compile Include="MongoRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MongoMembershipUser.cs" />
     <Compile Include="Resources\ProviderResources.Designer.cs">
