--- a/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
+++ b/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
@@ -59,6 +59,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestHelper.cs" />
     <Compile Include="TestRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMembershipProvider.cs" />
