--- a/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
+++ b/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
@@ -9,7 +9,7 @@
     <ProjectGuid>{F96F85DD-E9BD-4DEC-A86A-7D2460835C70}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalLiberationFront.MongoDB.Web.Security.Test</RootNamespace>
+    <RootNamespace>DigitalLiberationFront.MongoDB.Web.Test</RootNamespace>
     <AssemblyName>DigitalLiberationFront.MongoDB.Web.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -60,9 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestHelper.cs" />
-    <Compile Include="TestRoleProvider.cs" />
+    <Compile Include="Security\TestRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestMembershipProvider.cs" />
+    <Compile Include="Security\TestMembershipProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -72,6 +72,9 @@
       <Project>{19BBCDE3-BC95-4CDF-8BDE-C04383A971C7}</Project>
       <Name>DigitalLiberationFront.MongoDB.Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Profile\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
