Added SerializationHelper for helping with more complex serialization. Changed all instances where DateTime was passed to Mongo to use SerializationHelper.SerializeDateTime so that it uses a special representation that is consistent with how the driver serializes the internal classes.

--- a/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
+++ b/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SerializationHelper.cs" />
     <Compile Include="Profile\MongoProfile.cs" />
     <Compile Include="Profile\MongoProfileProvider.cs" />
     <Compile Include="Security\MongoMembershipProvider.cs" />
