Added the SessionStateStore class. Added a bunch of supporting code relating to the session store to the helpers. Added a default description to all providers. Implemented some methods in the SesssionStateStore. Bumped the version to 0.4.

--- a/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
+++ b/MongoDB.Web/DigitalLiberationFront.MongoDB.Web.csproj
@@ -63,6 +63,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ProviderResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SessionState\MongoSession.cs" />
+    <Compile Include="SessionState\MongoSessionStateStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
