Added some SessionStateStore tests and associated plumbing. Attempted to implement the GetItem* methods (the reference implementation from MS is horrendous).

--- a/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
+++ b/MongoDB.Web.Test/DigitalLiberationFront.MongoDB.Web.Test.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Profile\TestProfileProvider.cs" />
+    <Compile Include="SessionState\TestSessionStateStore.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="Security\TestRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
